# django_courseproject

./: .gitignore  ReadMe.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: celery.py  settings.py  template.env  urls.py
main/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_client_owner_emailmessage_owner_mailer_owner_and_more.py  0003_mailingperiod_owner.py
main/templates/main/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  emailmessage_confirm_delete.html  emailmessage_detail.html  emailmessage_list.html  index.html  mailer_confirm_delete.html  mailer_detail.html  mailer_form.html  mailer_list.html  mailingperiod_confirm_delete.html  mailingperiod_detail.html  mailingperiod_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
main/templatetags/: media_path.py
supervisor/: celery_worker.conf
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_banned.py
users/templates/users/: login.html  password_reset_done.html  password_reset_form.html  password_reset_sent.html  register.html  request_to_reset_password.html  reset_password.html  verification_failed.html  verification_pass.html  verify_email_message.html
(+1 files in other folders)
