[tool.poetry]
name = "django-courseproject"
version = "0.1.0"
description = ""
authors = ["korchaginks <kkonstantinserg@gmail.com>"]
readme = "README.md"
packages = [{include = "django_courseproject"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
django-select2 = "^8.1.2"
django-bootstrap-datepicker-plus = "^5.0.4"
django-bootstrap4 = "^23.2"
django-widget-tweaks = "^1.5.0"
celery = "^5.3.4"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
